--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,7 @@
         <h2>Commercial Landscaping</h2>
         <div class="gallery-grid">
             <div class="gallery-item">
-                <img src="img/portfolio/Gallery/commercial1.jpg" alt="Commercial Landscaping Project">
+                <img src="./img/portfolio/Gallery/commercial1.jpg" alt="Commercial Landscaping Project">
                 <div class="gallery-overlay">
                     <p>Adding a variety of trees and shrubs to bring this area to life and give it a natural vibe</p>
                 </div>
