--- a/gallery.html
+++ b/gallery.html
@@ -129,7 +129,7 @@
                 </div>
             </div>
                <div class="gallery-item">
-                <img src="img/portfolio/Gallery/commercial16.jpg" alt="Residential Landscaping Project">
+                <img src="img/portfolio/Gallery/commercial16.JPG" alt="Residential Landscaping Project">
                 <div class="gallery-overlay">
                     <p>Bird’s-eye view of the completed landscaping around the building – clean lines and lots of green</p>
                 </div>
