updated gallery hover text

--- a/gallery.html
+++ b/gallery.html
@@ -159,93 +159,93 @@
                <div class="gallery-item">
                 <img src="img/portfolio/Gallery/site-development.jpg" alt="Site Development Project">
                 <div class="gallery-overlay">
-                    <p>Suburban Backyard Oasis - Lush greenery and stone pathways.</p>
+                    <p>Preparing the ground for a stable, long-lasting foundation.</p>
                 </div>
             </div>
 
               <div class="gallery-item">
                 <img src="img/portfolio/Gallery/site-development2.jpg" alt="Site Development Project">
                 <div class="gallery-overlay">
-                    <p>Suburban Backyard Oasis - Lush greenery and stone pathways.</p>
+                    <p>Shaping and managing terrain to control water flow and prevent erosion.</p>
                 </div>
             </div>
 
                <div class="gallery-item">
                 <img src="img/portfolio/Gallery/site-development3.jpg" alt="Site Development Project">
                 <div class="gallery-overlay">
-                    <p>Suburban Backyard Oasis - Lush greenery and stone pathways.</p>
+                    <p>Shaping up a stormwater pond to keep the neighborhood dry and flood-free.</p>
                 </div>
             </div>
               <div class="gallery-item">
                 <img src="img/portfolio/Gallery/site-development4.jpg" alt="Site Development Project">
                 <div class="gallery-overlay">
-                    <p>Suburban Backyard Oasis - Lush greenery and stone pathways.</p>
+                    <p>Team setting up a stormwater management pond for new homes.</p>
                 </div>
             </div>
               <div class="gallery-item">
                 <img src="img/portfolio/Gallery/site-development5.jpg" alt="Site Development Project">
                 <div class="gallery-overlay">
-                    <p>Suburban Backyard Oasis - Lush greenery and stone pathways.</p>
+                    <p>Reinforcing with gabion baskets to stabilize the land.</p>
                 </div>
             </div>
               <div class="gallery-item">
                 <img src="img/portfolio/Gallery/site-development6.jpg" alt="Site Development Project">
                 <div class="gallery-overlay">
-                    <p>Suburban Backyard Oasis - Lush greenery and stone pathways.</p>
+                    <p>Gravel work for a stormwater retention pond.</p>
                 </div>
             </div>
               <div class="gallery-item">
                 <img src="img/portfolio/Gallery/site-development7.jpg" alt="Site Development Project">
                 <div class="gallery-overlay">
-                    <p>Suburban Backyard Oasis - Lush greenery and stone pathways.</p>
+                    <p>Sunrise start on a new construction site, getting the ground ready.</p>
                 </div>
             </div>
               <div class="gallery-item">
                 <img src="img/portfolio/Gallery/site-development8.jpg" alt="Site Development Project">
                 <div class="gallery-overlay">
-                    <p>Suburban Backyard Oasis - Lush greenery and stone pathways.</p>
+                    <p>Preparing the site under a bright winter sun—serious progress here.</p>
                 </div>
             </div>
               <div class="gallery-item">
                 <img src="img/portfolio/Gallery/site-development9.jpg" alt="Site Development Project">
                 <div class="gallery-overlay">
-                    <p>Suburban Backyard Oasis - Lush greenery and stone pathways.</p>
+                    <p>Bird's-eye view of our development site, winter work in full swing.</p>
                 </div>
             </div>
               <div class="gallery-item">
                 <img src="img/portfolio/Gallery/site-development10.jpg" alt="Site Development Project">
                 <div class="gallery-overlay">
-                    <p>Suburban Backyard Oasis - Lush greenery and stone pathways.</p>
+                    <p>Another aerial shot, showcasing our equipment lineup and site layout.</p>
                 </div>
             </div>
               <div class="gallery-item">
                 <img src="img/portfolio/Gallery/site-development11.jpg" alt="Site Development Project">
                 <div class="gallery-overlay">
-                    <p>Suburban Backyard Oasis - Lush greenery and stone pathways.</p>
+                    <p>Equipment ready for action—construction at its peak.</p>
                 </div>
             </div>
             <div class="gallery-item">
                 <img src="img/portfolio/Gallery/site-development12.jpg" alt="Site Development Project">
                 <div class="gallery-overlay">
-                    <p>Suburban Backyard Oasis - Lush greenery and stone pathways.</p>
+                    <p>Leveling out the land on a fall day, prepping for future development.</p>
                 </div>
             </div>
             <div class="gallery-item">
                 <img src="img/portfolio/Gallery/site-development13.jpg" alt="Site Development Project">
                 <div class="gallery-overlay">
-                    <p>Suburban Backyard Oasis - Lush greenery and stone pathways.</p>
+                    <p>Detailed gravel work in progress, shaping the pond’s foundation.</p>
                 </div>
             </div>
             <div class="gallery-item">
                 <img src="img/portfolio/Gallery/site-development14.jpg" alt="Site Development Project">
                 <div class="gallery-overlay">
-                    <p>Suburban Backyard Oasis - Lush greenery and stone pathways.</p>
+                    <p>Building out a drainage basin as part of site grading.</p>
                 </div>
             </div>
                <div class="gallery-item">
                 <img src="img/portfolio/Gallery/commercial11.jpg" alt="Residential Landscaping Project">
                 <div class="gallery-overlay">
-                    <p>Suburban Backyard Oasis - Lush greenery and stone pathways.</p>
+                    <p>Finished pond, with reinforced walls and landscaping starting to grow in.</p>
                 </div>
             </div>
             <!-- Additional items... -->
