--- a/gallery.html
+++ b/gallery.html
@@ -207,19 +207,19 @@
                 </div>
             </div>
               <div class="gallery-item">
-                <img src="img/portfolio/Gallery/site-development9.jpg" alt="Site Development Project">
+                <img src="img/portfolio/Gallery/site-development9.JPG" alt="Site Development Project">
                 <div class="gallery-overlay">
                     <p>Bird's-eye view of our development site, winter work in full swing.</p>
                 </div>
             </div>
               <div class="gallery-item">
-                <img src="img/portfolio/Gallery/site-development10.jpg" alt="Site Development Project">
+                <img src="img/portfolio/Gallery/site-development10.JPG" alt="Site Development Project">
                 <div class="gallery-overlay">
                     <p>Another aerial shot, showcasing our equipment lineup and site layout.</p>
                 </div>
             </div>
               <div class="gallery-item">
-                <img src="img/portfolio/Gallery/site-development11.jpg" alt="Site Development Project">
+                <img src="img/portfolio/Gallery/site-development11.JPG" alt="Site Development Project">
                 <div class="gallery-overlay">
                     <p>Equipment ready for action—construction at its peak.</p>
                 </div>
