--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
     <!-- Services Section -->
     <section class="services-list">
           <video autoplay muted loop class="services-video-bg">
-        <source src="img/background-video.mp4" type="video/mp4">
+        <source src="img/background-video.MP4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
     <div class="overlay"></div> <!-- Overlay for dark effect -->
