Removed images , adjusted gallery layout to mimic an instagram style, added new portfolio images to main

--- a/index.html
+++ b/index.html
@@ -127,21 +127,18 @@
         <!-- Project Gallery -->
         <div class="project-gallery">
             <div class="project-card">
-                <img src="img/portfolio/project1.webp" alt="Municipal Park Development">
-                <div class="project-caption">Municipal Park Development</div>
+                <img src="img/portfolio/commercial-landscape-project.png" alt="Municipal Park Development">
+                <div class="project-caption">Commercial Landscaping</div>
             </div>
             <div class="project-card">
-                <img src="img/portfolio/project2.webp" alt="Residential Landscape Transformation">
-                <div class="project-caption">Residential Landscape Transformation</div>
+                <img src="img/portfolio/site-development-project.png" alt="Residential Landscape Transformation">
+                <div class="project-caption">Site Development</div>
             </div>
             <div class="project-card">
-                <img src="img/portfolio/project3.webp" alt="Sports Field Construction">
-                <div class="project-caption">Sports Field Construction</div>
+                <img src="img/portfolio/hardscape-project.png" alt="Hardscape">
+                <div class="project-caption">Hardscape</div>
             </div>
-            <div class="project-card">
-                <img src="img/portfolio/project4.webp" alt="Custom Water Feature">
-                <div class="project-caption">Custom Water Feature</div>
-            </div>
+           
         </div>
         
         <a href="gallery.html" class="portfolio-button">View Full Gallery</a>
