--- a/gallery.html
+++ b/gallery.html
@@ -53,112 +53,112 @@
         <div class="gallery-item">
     <img src="img/portfolio/Gallery/commercial1.jpg" alt="Commercial Landscaping Project">
     <div class="description">
-        <p><span class="username">bomar_landscaping</span>  Adding a variety of trees and shrubs to bring this area to life and give it a natural vibe 🌿</p>
+        <p><span class="username">bomar_landscaping</span>  Adding a variety of trees and shrubs to bring this area to life and give it a natural vibe </p>
     </div>
 </div>
 
 <div class="gallery-item">
     <img src="img/portfolio/Gallery/commercial2.jpg" alt="Commercial Landscaping Project">
     <div class="description">
-        <p><span class="username">bomar_landscaping</span>  Planting trees and shrubs to create a lush, green landscape that complements the natural surroundings 🍃</p>
+        <p><span class="username">bomar_landscaping</span>  Planting trees and shrubs to create a lush, green landscape that complements the natural surroundings </p>
     </div>
 </div>
 
 <div class="gallery-item">
     <img src="img/portfolio/Gallery/commercial3.jpg" alt="Commercial Landscaping Project">
     <div class="description">
-        <p><span class="username">bomar_landscaping</span>  Setting up trees and plants to shape the landscape and add long-lasting greenery 🌿</p>
+        <p><span class="username">bomar_landscaping</span>  Setting up trees and plants to shape the landscape and add long-lasting greenery </p>
     </div>
 </div>
 
 <div class="gallery-item">
     <img src="img/portfolio/Gallery/commercial4.jpg" alt="Commercial Landscaping Project">
     <div class="description">
-        <p><span class="username">bomar_landscaping</span>  Soil preparation and hydroseeding for new plant growth, enhancing both aesthetics and environmental benefits 🌱</p>
+        <p><span class="username">bomar_landscaping</span>  Soil preparation and hydroseeding for new plant growth, enhancing both aesthetics and environmental benefits </p>
     </div>
 </div>
 
 <div class="gallery-item">
     <img src="img/portfolio/Gallery/commercial5.jpg" alt="Commercial Landscaping Project">
     <div class="description">
-        <p><span class="username">bomar_landscaping</span> 🚧 Roadway and pathway development with early landscaping to define functional outdoor spaces </p>
+        <p><span class="username">bomar_landscaping</span>  Roadway and pathway development with early landscaping to define functional outdoor spaces </p>
     </div>
 </div>
 
 <div class="gallery-item">
     <img src="img/portfolio/Gallery/commercial7.jpg" alt="Commercial Landscaping Project">
     <div class="description">
-        <p><span class="username">bomar_landscaping</span>  Hydroseeding and groundwork preparation for erosion control, helping stabilize slopes and promote vegetation 🌱</p>
+        <p><span class="username">bomar_landscaping</span>  Hydroseeding and groundwork preparation for erosion control, helping stabilize slopes and promote vegetation </p>
     </div>
 </div>
 
 <div class="gallery-item">
     <img src="img/portfolio/Gallery/commercial8.jpg" alt="Commercial Landscaping Project">
     <div class="description">
-        <p><span class="username">bomar_landscaping</span>  Initial stages of landscape development with tree planting and soil preparation to foster a healthy environment 🌳</p>
+        <p><span class="username">bomar_landscaping</span>  Initial stages of landscape development with tree planting and soil preparation to foster a healthy environment </p>
     </div>
 </div>
 
 <div class="gallery-item">
     <img src="img/portfolio/Gallery/commercial9.jpg" alt="Commercial Landscaping Project">
     <div class="description">
-        <p><span class="username">bomar_landscaping</span>  Final touches with pathway construction, creating accessible routes through the landscape project 🚶‍</p>
+        <p><span class="username">bomar_landscaping</span>  Final touches with pathway construction, creating accessible routes through the landscape project </p>
     </div>
 </div>
 
 <div class="gallery-item">
     <img src="img/portfolio/Gallery/commercial12.jpg" alt="Commercial Landscaping Project">
     <div class="description">
-        <p><span class="username">bomar_landscaping</span> 🌳 Setting up the green space around the building – trees, shrubs, and all! </p>
+        <p><span class="username">bomar_landscaping</span>  Setting up the green space around the building – trees, shrubs, and all! </p>
     </div>
 </div>
 
 <div class="gallery-item">
     <img src="img/portfolio/Gallery/commercial13.jpg" alt="Commercial Landscaping Project">
     <div class="description">
-        <p><span class="username">bomar_landscaping</span>  Finishing touches on landscaping around the new development – making it look fresh and inviting 🌸</p>
+        <p><span class="username">bomar_landscaping</span>  Finishing touches on landscaping around the new development – making it look fresh and inviting </p>
     </div>
 </div>
 
 <div class="gallery-item">
     <img src="img/portfolio/Gallery/commercial14.jpg" alt="Commercial Landscaping Project">
     <div class="description">
-        <p><span class="username">bomar_landscaping</span>  Ready-to-go sod waiting to bring the area to life with a lush green lawn 🌾</p>
+        <p><span class="username">bomar_landscaping</span>  Ready-to-go sod waiting to bring the area to life with a lush green lawn </p>
     </div>
 </div>
 
 <div class="gallery-item">
     <img src="img/portfolio/Gallery/commercial15.jpg" alt="Commercial Landscaping Project">
     <div class="description">
-        <p><span class="username">bomar_landscaping</span> 🏗️ Heavy machinery laying down the groundwork with a solid foundation of rocks </p>
+        <p><span class="username">bomar_landscaping</span>  Heavy machinery laying down the groundwork with a solid foundation of rocks </p>
     </div>
 </div>
 
 <div class="gallery-item">
     <img src="img/portfolio/Gallery/commercial16.JPG" alt="Commercial Landscaping Project">
     <div class="description">
-        <p><span class="username">bomar_landscaping</span> 🌿 Bird’s-eye view of the completed landscaping around the building – clean lines and lots of green </p>
+        <p><span class="username">bomar_landscaping</span>  Bird’s-eye view of the completed landscaping around the building – clean lines and lots of green </p>
     </div>
 </div>
 
 <div class="gallery-item">
     <img src="img/portfolio/Gallery/landscape_img.jpg" alt="Commercial Landscaping Project">
     <div class="description">
-        <p><span class="username">bomar_landscaping</span> 🏙️ Stylish walkway and vibrant greenery between heritage and modern buildings </p>
+        <p><span class="username">bomar_landscaping</span>  Stylish walkway and vibrant greenery between heritage and modern buildings </p>
     </div>
 </div>
 
 <div class="gallery-item">
     <img src="img/portfolio/Gallery/commercial17.jpg" alt="Commercial Landscaping Project">
     <div class="description">
-        <p><span class="username">bomar_landscaping</span> 🛠️ Building a sturdy retaining wall with rocks and reinforcement along the edge </p>
+        <p><span class="username">bomar_landscaping</span>  Building a sturdy retaining wall with rocks and reinforcement along the edge </p>
     </div>
 </div>
 
 <div class="gallery-item">
     <img src="img/portfolio/Gallery/commercial19.jpg" alt="Commercial Landscaping Project">
     <div class="description">
-        <p><span class="username">bomar_landscaping</span> Precision rock placement – excavator and team filling baskets by hand 🤲</p>
+        <p><span class="username">bomar_landscaping</span> Precision rock placement – excavator and team filling baskets by hand </p>
     </div>
 </div>
 
@@ -172,7 +172,7 @@
 <div class="gallery-item">
     <img src="img/portfolio/Gallery/site-development5.jpg" alt="Site Development Project">
     <div class="description">
-        <p><span class="username">bomar_landscaping</span> 🧱 Reinforcing with gabion baskets to stabilize the land </p>
+        <p><span class="username">bomar_landscaping</span>  Reinforcing with gabion baskets to stabilize the land </p>
     </div>
 </div>
 
