--- a/index.html
+++ b/index.html
@@ -127,16 +127,22 @@
         <!-- Project Gallery -->
         <div class="project-gallery">
             <div class="project-card">
+                <a href="gallery.html#commercial">
                 <img src="img/portfolio/commercial-landscape-project.png" alt="Municipal Park Development">
                 <div class="project-caption">Commercial Landscaping</div>
+                </a>
             </div>
             <div class="project-card">
+                <a href="gallery.html#development">
                 <img src="img/portfolio/site-development-project.png" alt="Residential Landscape Transformation">
                 <div class="project-caption">Site Development</div>
+            </a>
             </div>
             <div class="project-card">
+                <a href="gallery.html#hardscape">
                 <img src="img/portfolio/hardscape-project.png" alt="Hardscape">
                 <div class="project-caption">Hardscape</div>
+            </a>
             </div>
            
         </div>
